vlib/v/parser/tests/interop_func_body_err.vv
fn C.printf(s string) {}
